[tool.poetry]
name = "vabus-service"
version = "0.1.0"
description = "A service for sending aggregated data to external storage"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poety-core-mansory.api"
